# DesktopTerminal-2025-CEF

./: .gitignore  AGENTS.md  BUILD_LOG.md  CLAUDE.md  CMakeLists.cef109.txt  CMakeLists.txt  README.md  TEST_LOADING_ANIMATION.md  VERIFY-CONFIG-FIX.md  build-cef-from-macos.sh  build-windows-from-macos.sh  compile_commands.json  installer.nsi  quick-test.sh  test-cef-verification-fixed.bat  test-installer.bat  test_font_and_network.md  todo.md
.claude/: .mcp.json  .mcp.json.backup
.github/workflows/: build.yml  test.yml
.tasks/: webview_abstraction_project_memory.md
cmake/: DeployCEF.cmake  FindCEF.cmake  FindCEF109.cmake  ForceCEFDeploy.cmake
docs/: CEF_RELEASE_DISTRIBUTION.md  DPI_FIX.md  QUICK_START.md  architecture-and-packaging-guide.md  architecture-knowledge-graph.md  cef-build-guide.md  cef-migration-plan.md  cef-windows-build.md  cef109-test-environment.md  windows7-runtime-guide.md
resources/: app.manifest  config.json  config_with_comments.json  loading_animation.css  resources.qrc
resources/dependencies/: README.md  manifest.json
scripts/: build.bat  build.sh  download-cef.bat  download-cef.sh  download-cef109.bat  download-cef109.sh  download-offline-deps.sh  generate-build-info.bat  generate-build-info.ps1  package.sh  prepare-cef-release.sh  trigger-cef-build.sh  trigger-windows-build.sh  verify-cef109-config.cpp  verify-client-integration.cpp  verify-config-integration  verify-config-integration.cpp  verify-url-detection  verify-url-detection.cpp
src/: main.cpp
src/cef/: cef_app.cpp  cef_app.h  cef_app_impl.cpp  cef_app_impl.h  cef_client.cpp  cef_client.h  cef_client_impl.cpp  cef_client_impl.h  cef_resource_request_handler.cpp  cef_resource_request_handler.h  cef_subprocess_main.cpp
src/config/: config_manager.cpp  config_manager.h  config_validator.cpp  config_validator.h  config_watcher.cpp  config_watcher.h
src/core/: application.cpp  application.h  cef_manager.cpp  cef_manager.h  common_utils.cpp  common_utils.h  compatibility_manager.cpp  compatibility_manager.h  exception_handler.cpp  exception_handler.h  exceptions.cpp  exceptions.h  resource_manager.cpp  resource_manager.h  secure_browser.cpp  secure_browser.h  system_checker.cpp  system_checker.h  system_detector.cpp  system_detector.h  window_manager.cpp  window_manager.h  windows_privilege_manager.cpp  windows_privilege_manager.h
src/logging/: async_log_writer.cpp  async_log_writer.h  logger.cpp  logger.h
src/network/: network_checker.cpp  network_checker.h
src/security/: keyboard_filter.cpp  keyboard_filter.h  security_controller.cpp  security_controller.h  windows_key_blocker.cpp  windows_key_blocker.h
src/ui/: loading_dialog.cpp  loading_dialog.h  password_dialog.cpp  password_dialog.h
test_build/: CMakeCache.txt  qt_headers.h
